# multi_pdf_chat

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  dockerfile  htmlTemplates.py  pyproject.toml  requirements.txt  tts.py
